Adding sliders in work and blog sections

--- a/index.html
+++ b/index.html
@@ -428,6 +428,44 @@
 							<a class="Animation" href="#"><li>ANIMATION</li></a>
 						</ul>
 					</div>
+					<div id="work-slider" class="splide animate" role="group" aria-label="Work carousel">
+						<div class="splide__arrows">
+							<button class="splide__arrow splide__arrow--prev">
+								<svg style="transform: rotate(0deg);" width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M0.939339 10.9393C0.353554 11.5251 0.353554 12.4749 0.939339 13.0607L10.4853 22.6066C11.0711 23.1924 12.0208 23.1924 12.6066 22.6066C13.1924 22.0208 13.1924 21.0711 12.6066 20.4853L4.12132 12L12.6066 3.51472C13.1924 2.92893 13.1924 1.97918 12.6066 1.3934C12.0208 0.807608 11.0711 0.807608 10.4853 1.3934L0.939339 10.9393ZM47 10.5L2 10.5L2 13.5L47 13.5L47 10.5Z" fill="white"/>
+								</svg>											
+							</button>
+							<button class="splide__arrow splide__arrow--next">
+								<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="white"/>
+								</svg>
+							</button>
+						  </div>
+						<div class="splide__track">
+							<ul class="splide__list">
+								<li class="splide__slide">
+									<div class="work-pic">
+										<img width="100%" src="images/work/1.png" alt="work member 1">								
+									</div>
+								</li>
+								<li class="splide__slide">
+									<div class="work-pic">
+										<img width="100%" src="images/work/2.png" alt="work member 2">
+									</div>
+								</li>
+								<li class="splide__slide">
+									<div class="work-pic">
+										<img width="100%" src="images/work/3.png" alt="work member 3">
+									</div>
+								</li>
+								<li class="splide__slide">
+									<div class="work-pic">
+										<img width="100%" src="images/work/4.png" alt="work member 4">
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>				
 			</div>
 			<!--BLOG SECTION-->
@@ -443,6 +481,59 @@
 								<a href="#tips"><li>TIPS</li></a>
 								<a href="#design"><li>GRAPHICS DESIGN</li></a>
 							</ul>
+						</div>
+						<div id="blog-slider" class="splide animate" role="group" aria-label="Blog carousel">
+							<div class="splide__arrows">
+								<button class="splide__arrow splide__arrow--prev">
+									<svg style="transform: rotate(0deg);" width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M0.939339 10.9393C0.353554 11.5251 0.353554 12.4749 0.939339 13.0607L10.4853 22.6066C11.0711 23.1924 12.0208 23.1924 12.6066 22.6066C13.1924 22.0208 13.1924 21.0711 12.6066 20.4853L4.12132 12L12.6066 3.51472C13.1924 2.92893 13.1924 1.97918 12.6066 1.3934C12.0208 0.807608 11.0711 0.807608 10.4853 1.3934L0.939339 10.9393ZM47 10.5L2 10.5L2 13.5L47 13.5L47 10.5Z" fill="white"/>
+									</svg>											
+								</button>
+								<button class="splide__arrow splide__arrow--next">
+									<svg width="47" height="24" viewBox="0 0 47 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M46.0607 13.0607C46.6464 12.4749 46.6464 11.5251 46.0607 10.9393L36.5147 1.3934C35.9289 0.807611 34.9792 0.807611 34.3934 1.3934C33.8076 1.97919 33.8076 2.92893 34.3934 3.51472L42.8787 12L34.3934 20.4853C33.8076 21.0711 33.8076 22.0208 34.3934 22.6066C34.9792 23.1924 35.9289 23.1924 36.5147 22.6066L46.0607 13.0607ZM0 13.5L45 13.5V10.5L0 10.5L0 13.5Z" fill="white"/>
+									</svg>
+								</button>
+							  </div>
+							<div class="splide__track">
+								<ul class="splide__list">
+									<li class="splide__slide">
+										<div class="blog-pic">
+											<img width="100%" src="images/blog/1.png" alt="blog member 1">								
+										</div>
+									</li>
+									<li class="splide__slide">
+										<div class="blog-pic">
+											<img width="100%" src="images/blog/2.png" alt="blog member 2">
+										</div>
+									</li>
+									<li class="splide__slide">
+										<div class="blog-pic">
+											<img width="100%" src="images/blog/3.png" alt="blog member 3">
+										</div>
+									</li>
+									<li class="splide__slide">
+										<div class="blog-pic">
+											<img width="100%" src="images/blog/4.png" alt="blog member 4">
+										</div>
+									</li>
+									<li class="splide__slide">
+										<div class="blog-pic">
+											<img width="100%" src="images/blog/5.png" alt="blog member 5">
+										</div>
+									</li>
+									<li class="splide__slide">
+										<div class="blog-pic">
+											<img width="100%" src="images/blog/6.png" alt="blog member 6">
+										</div>
+									</li>
+									<li class="splide__slide">
+										<div class="blog-pic">
+											<img width="100%" src="images/blog/7.png" alt="blog member 7">
+										</div>
+									</li>
+								</ul>
+							</div>
 						</div>					
 					</div>						
 				</div>
@@ -652,9 +743,45 @@
 					},
 				},
 			});
+			var splide3 = new Splide( '#work-slider', {
+				type   : 'loop',
+				perPage: 3,
+				perMove: 1,
+				gap: '2rem',
+				pagination: false,
+				breakpoints: {
+					1440: {
+					  perPage: 2,
+					  gap: '1rem'
+					},
+					480: {
+					  perPage: 1,
+					  width: '60%',
+					},
+				},
+			});
+			var splide4 = new Splide( '#blog-slider', {
+				type   : 'loop',
+				perPage: 3,
+				perMove: 1,
+				gap: '2rem',
+				pagination: false,
+				breakpoints: {
+					1440: {
+					  perPage: 2,
+					  gap: '1rem'
+					},
+					480: {
+					  perPage: 1,
+					  width: '60%',
+					},
+				},
+			});
 			  
 			splide.mount();
 			splide2.mount();
+			splide3.mount();
+			splide4.mount();
 			//Full page		
 			var myFullpage = new fullpage('#fullpage', {
 				css3:true,
