Adding hover to blog post slider

--- a/index.html
+++ b/index.html
@@ -499,37 +499,86 @@
 								<ul class="splide__list">
 									<li class="splide__slide">
 										<div class="blog-pic">
-											<img width="100%" src="images/blog/1.png" alt="blog member 1">								
+											<img width="100%" src="images/blog/1.png" alt="blog member 1">	
+											<div class="blog-more">
+												<h5>What should you know about digital marketing?</h5>
+												<div class="read-more">
+													<h6>READ MORE</h6>
+													<h6>23/05/2023</h6>
+												</div>
+											</div>							
 										</div>
 									</li>
 									<li class="splide__slide">
 										<div class="blog-pic">
 											<img width="100%" src="images/blog/2.png" alt="blog member 2">
+											<div class="blog-more">
+												<h5>What should you know about digital marketing?</h5>
+												<div class="read-more">
+													<h6>READ MORE</h6>
+													<h6>23/05/2023</h6>
+												</div>												
+											</div>
 										</div>
 									</li>
 									<li class="splide__slide">
 										<div class="blog-pic">
 											<img width="100%" src="images/blog/3.png" alt="blog member 3">
+											<div class="blog-more">
+												<h5>What should you know about digital marketing?</h5>
+												<div class="read-more">
+													<h6>READ MORE</h6>
+													<h6>23/05/2023</h6>
+												</div>
+											</div>
 										</div>
 									</li>
 									<li class="splide__slide">
 										<div class="blog-pic">
 											<img width="100%" src="images/blog/4.png" alt="blog member 4">
+											<div class="blog-more">
+												<h5>What should you know about digital marketing?</h5>
+												<div class="read-more">
+													<h6>READ MORE</h6>
+													<h6>23/05/2023</h6>
+												</div>
+											</div>
 										</div>
 									</li>
 									<li class="splide__slide">
 										<div class="blog-pic">
 											<img width="100%" src="images/blog/5.png" alt="blog member 5">
+											<div class="blog-more">
+												<h5>What should you know about digital marketing?</h5>
+												<div class="read-more">
+													<h6>READ MORE</h6>
+													<h6>23/05/2023</h6>
+												</div>
+											</div>
 										</div>
 									</li>
 									<li class="splide__slide">
 										<div class="blog-pic">
 											<img width="100%" src="images/blog/6.png" alt="blog member 6">
+											<div class="blog-more">
+												<h5>What should you know about digital marketing?</h5>
+												<div class="read-more">
+													<h6>READ MORE</h6>
+													<h6>23/05/2023</h6>
+												</div>
+											</div>
 										</div>
 									</li>
 									<li class="splide__slide">
 										<div class="blog-pic">
 											<img width="100%" src="images/blog/7.png" alt="blog member 7">
+											<div class="blog-more">
+												<h5>What should you know about digital marketing?</h5>
+												<div class="read-more">
+													<h6>READ MORE</h6>
+													<h6>23/05/2023</h6>
+												</div>
+											</div>
 										</div>
 									</li>
 								</ul>
@@ -762,17 +811,14 @@
 			});
 			var splide4 = new Splide( '#blog-slider', {
 				type   : 'loop',
-				perPage: 3,
-				perMove: 1,
+				perPage: 2,
+				perMove: 2,
 				gap: '2rem',
 				pagination: false,
 				breakpoints: {
-					1440: {
-					  perPage: 2,
-					  gap: '1rem'
-					},
 					480: {
 					  perPage: 1,
+					  perMove: 2,
 					  width: '60%',
 					},
 				},
