Fixes in team members

--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 											<div class="team-pic">
 												<img width="100%" src="images/team/3.png" alt="team member 3">
 												<div class="team-more">
-													<h5>Sarah Hoornaert</h5>
-													<h5>Content Creator</h5>
+													<h5>Maria Andrea Nieves</h5>
+													<h5>Social Media Content Creator</h5>
 												</div>
 											</div>
 										</li>
@@ -242,8 +242,8 @@
 											<div class="team-pic">
 												<img width="100%" src="images/team/4.png" alt="team member 4">
 												<div class="team-more">
-													<h5>Maria Andrea Nieves</h5>
-													<h5>Social Media Content Creator</h5>
+													<h5>Sarah Hoornaert</h5>
+													<h5>Photographer</h5>
 												</div>
 											</div>
 										</li>
@@ -261,7 +261,7 @@
 												<img width="100%" src="images/team/6.png" alt="team member 6">
 												<div class="team-more">
 													<h5>Carlos Romero</h5>
-													<h5>Designer</h5>
+													<h5>Videographer / Graphic Designer</h5>
 												</div>
 											</div>
 										</li>
