Modal for projects completed

--- a/index.html
+++ b/index.html
@@ -428,22 +428,22 @@
 							<ul class="splide__list">
 								<li class="splide__slide">
 									<div class="work-pic">
-										<img width="100%" src="images/work/1.png" alt="work member 1">								
+										<img class="project-item" width="100%" src="images/work/1.png" alt="work member 1">								
 									</div>
 								</li>
 								<li class="splide__slide">
 									<div class="work-pic">
-										<img width="100%" src="images/work/2.png" alt="work member 2">
+										<img class="project-item" width="100%" src="images/work/2.png" alt="work member 2">
 									</div>
 								</li>
 								<li class="splide__slide">
 									<div class="work-pic">
-										<img width="100%" src="images/work/3.png" alt="work member 3">
+										<img class="project-item" width="100%" src="images/work/3.png" alt="work member 3">
 									</div>
 								</li>
 								<li class="splide__slide">
 									<div class="work-pic">
-										<img width="100%" src="images/work/4.png" alt="work member 4">
+										<img class="project-item" width="100%" src="images/work/4.png" alt="work member 4">
 									</div>
 								</li>
 							</ul>
@@ -721,6 +721,19 @@
 						</a>
 					</div>				  
 			  </div>
+			</div>
+		</div>
+
+		<!--Modal Project-->
+		<div id="modalProject" class="modalProject">
+			<span class="close-project">&times;</span>
+			<img class="modal-content-project" id="modalImage">
+			<div class="modal-project-text">
+				<h1>Project Title</h1>
+				<h4>SHORT DESCRIPTION</h4>
+				<p>Whatever you’re looking to achieve, feel free to call our studio for an 
+					informal chat, drop us an email or pop in for a cup of coffee and some fresh ideas.
+				</p>
 			</div>
 		</div>
 
