Fix a typo in contact section

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 					<source src="images/abu_dhabi_dark.mp4" type="video/mp4">
 				</video>
 				<div class="contactus-text">
-					<h1>LETS TALK</h1>
+					<h1>LET'S TALK</h1>
 					<h4>WE’D LOVE TO HEAR FROM YOU</h4>
 					<p>
 						Whatever you’re looking to achieve, feel free to call our studio for an 
