Fix pagination and other stuff in sliders

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="description" content="Sadaf Media CREATING YOUR BRAND’S FUTURE, TODAY! We are a forward-thinking, full-service branding and marketing agency, located in Abu Dhabi, United Arab Emirates, committed to making your brand stand out in today’s saturated marketplace." />
 		<meta name="keywords"  content="sadaf media,marketing,social media,media production,photography,videography,animation" />
+		<meta name="format-detection" content="telephone=no">
 
 		<title>Sadaf Media</title>
 		<link rel="icon" type="image/png" href="images/favicon.png"/>
@@ -801,6 +802,8 @@
 					480: {
 					  perPage: 1,
 					  width: '100%',
+					  pagination: true,
+					  arrows: false,
 					},
 				},
 			});
@@ -818,6 +821,8 @@
 					480: {
 					  perPage: 1,
 					  width: '100%',
+					  pagination: true,
+					  arrows: false,
 					},
 				},
 			});
@@ -832,6 +837,8 @@
 					  perPage: 1,
 					  perMove: 1,
 					  width: '100%',
+					  pagination: true,
+					  arrows: false,
 					},
 				},
 			});
