Adding favicon and other small fixes

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					<a href="#home"><li>HOME</li></a>
 					<a href="#aboutus"><li>ABOUT US</li></a>					
 					<a href="#services"><li>SERVICES</li></a>
-					<a href="#work"><li>PORTAFOLIO</li></a>
+					<a href="#work"><li>WORK</li></a>
 					<a href="#contactus"><li>LET'S TALK</li></a>
 				</ul>
 				<ul class="social-buttons">
@@ -412,7 +412,7 @@
 					<h4>IT’S WHAT’S ON THE INSIDE THAT MATTERS</h4>
 					<div class="work-filter animate">
 						<ul class="filter-menu">
-							<a class="All" href="#"><li>ALL</li></a>
+							<a class="All" href="#"><li style="color: #FFD601;">ALL</li></a>
 							<a class="Graphic" href="#"><li>GRAPHIC DESIGN</li></a>
 							<a class="Social" href="#"><li>SOCIAL MEDIA</li></a>
 							<a class="Video" href="#"><li>VIDEOGRAPHY & PHOTOGRAPHY</li></a>
@@ -636,7 +636,7 @@
 						<ul>
 							<a href="#home"><li>HOME</li></a>
 							<a href="#aboutus"><li>ABOUT US</li></a>
-							<a href="#portafolio"><li>PORTAFOLIO</li></a>
+							<a href="#work"><li>WORK</li></a>
 							<a href="#services"><li>SERVICES</li></a>
 							<a href="#contactus"><li>LET'S TALK</li></a>
 						</ul>
@@ -736,6 +736,9 @@
 		<div id="modalProject" class="modalProject">
 			<span class="close-project">&times;</span>
 			<img class="modal-background" id="modalImage">
+			<div class="mouse">
+				<img class="black_scroll" width="80px"src="images/black_scroll.gif" alt="scroll black">
+			</div>
 			<section id="splideModal" class="splide splide-modal" aria-label="Splide inside a modal">
 				<div class="splide__track">
 					  <ul class="splide__list">
