--- a/index.html
+++ b/index.html
@@ -380,12 +380,11 @@
 							<div class="service second">
 								<img width="100%" src="images/services/2.png" alt="service 2">
 							</div>
-							<div class="service three">
-								<img width="100%" src="images/services/3.png" alt="service 3">
-							</div>
 							<div class="service four">
 								<img width="100%" src="images/services/4.png" alt="service 4">
-							</div>
+							</div>							
+						</div>
+						<div class="services-more">
 							<div class="service five">
 								<img width="100%" src="images/services/5.png" alt="service 5">
 							</div>
@@ -586,11 +585,11 @@
 
 					</p>
 					<div class="contactus-social">
-						<img class="team-item" src="images/social/instagram.png" height="45px" alt="instagram icon">
-						<img class="team-item" src="images/social/mail.png" height="45px" alt="mail icon">
-						<img class="team-item" src="images/social/linkedin.png" height="45px" alt="linkedin icon">
-						<img class="team-item" src="images/social/facebook.png" height="45px" alt="facebook icon">
-						<img class="team-item" src="images/social/twitter.png" height="45px" alt="twitter icon">
+						<a href="https://instagram.com" target="_blank"><img class="team-item" src="images/social/instagram.png" height="45px" alt="instagram icon"></a>
+						<a href="mailto:info@sadafmedia.com"><img class="team-item" src="images/social/mail.png" height="45px" alt="mail icon"></a>
+						<a href="https://linkedin.com" target="_blank"><img class="team-item" src="images/social/linkedin.png" height="45px" alt="linkedin icon"></a>
+						<a href="https://facebook.com" target="_blank"><img class="team-item" src="images/social/facebook.png" height="45px" alt="facebook icon"></a>
+						<a href="https://twitter.com" target="_blank"><img class="team-item" src="images/social/twitter.png" height="45px" alt="twitter icon"></a>
 					</div>
 					<div class="contactus-number animate">02 201 2500</div>
 					<div class="contactus-more animate">
