Add blog page and other features

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
 			</div>
 		</div>
 	
+		<div id="scope" class="scope"></div>
+		
 		<div id="fullpage">	
 			<!--COVER SECTION-->					
 			<div class="section home child" id="section0">
@@ -425,24 +427,31 @@
 						  </div>
 						<div class="splide__track">
 							<ul class="splide__list">
-								<li class="splide__slide">
+								<li class="splide__slide project-item">
 									<div class="work-pic">
-										<img class="project-item" width="100%" src="images/work/1.png" alt="work member 1">								
+										<img width="100%" src="images/work/1.png" alt="work member 1">								
+									</div>
+									<div style="display: none !important;" class="project-content">
+										<h1>Project Title</h1>
+										<h4>SHORT DESCRIPTION</h4>
+										<p>Whatever you’re looking to achieve, feel free to call our studio for an 
+											informal chat, drop us an email or pop in for a cup of coffee and some fresh ideas.
+										</p>
 									</div>
 								</li>
-								<li class="splide__slide">
+								<li class="splide__slide project-item">
 									<div class="work-pic">
-										<img class="project-item" width="100%" src="images/work/2.png" alt="work member 2">
+										<img width="100%" src="images/work/2.png" alt="work member 2">
 									</div>
 								</li>
-								<li class="splide__slide">
+								<li class="splide__slide project-item">
 									<div class="work-pic">
-										<img class="project-item" width="100%" src="images/work/3.png" alt="work member 3">
+										<img width="100%" src="images/work/3.png" alt="work member 3">
 									</div>
 								</li>
-								<li class="splide__slide">
+								<li class="splide__slide project-item">
 									<div class="work-pic">
-										<img class="project-item" width="100%" src="images/work/4.png" alt="work member 4">
+										<img width="100%" src="images/work/4.png" alt="work member 4">
 									</div>
 								</li>
 							</ul>
@@ -743,11 +752,6 @@
 						  </li>
 						  <li class="splide__slide">
 							<div class="modal-project-text">
-								<h1>Project Title</h1>
-								<h4>SHORT DESCRIPTION</h4>
-								<p>Whatever you’re looking to achieve, feel free to call our studio for an 
-									informal chat, drop us an email or pop in for a cup of coffee and some fresh ideas.
-								</p>
 							</div>
 						  </li>
 					  </ul>
